# bark

./: .gitignore  CHANGELOG.md  README.md  bark.cabal  build.sh  build_site.sh  todo.md
app/: Main.hs
app/Bark/: CLI.hs  Core.hs  FrontMatter.hs  Preprocess.hs  Transformers.hs  Types.hs
app/Bark/Internal/: IOUtil.hs
app/Bark/Preprocessors/: SyntaxHighlight.hs
app/Bark/Processors/: SyntaxHighlight.hs
app/Misc/: IOUtil.hs
app/src/: Bark.hs
docs/: index.html
docs/assets/css/: style.css  syntax.css
docs/css/: style.css
site/: README.md  bark.yml
site/assets/css/: style.css
site/src/: index.md
site/src/content/: index.md
site/src/copy-over/: test.txt
site/src/css/: style.css
site/template/: page.mustache  post.html  post.mustache
test/: Main.hs
