cabal-version:      3.6
name:               bark
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A minimal static site generator.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: MIT

author: Srijan Paul

maintainer: srijannr1@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library bark-internal
    hs-source-dirs: app
    build-depends:
        base,
        containers,
        mustache,
        text,
        filepath,
        dir-traverse,
        directory
    exposed-modules:
        Bark.Internal.IOUtil

library
    hs-source-dirs: app
    build-depends:
        base,
        bark:bark-internal,
        commonmark,
        commonmark-extensions,
        text,
        directory,
        filepath,
        containers,
        mustache,
        unordered-containers,
        vector,
        fsnotify,
        dir-traverse,
        skylighting,
        tagsoup,
        blaze-html

    exposed-modules:
        Bark.Core,
        Bark.FrontMatter,
        Bark.Preprocess


executable bark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Bark.Core,
        Bark.FrontMatter,
        Bark.Preprocess
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        text,
        commonmark,
        commonmark-extensions,
        directory,
        filepath,
        containers,
        mustache,
        unordered-containers,
        vector,
        fsnotify,
        dir-traverse,
        skylighting,
        tagsoup,
        blaze-html

    ghc-options:
        -threaded
        -fwarn-name-shadowing
        -fwarn-unused-imports
        -fwarn-tabs

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-bark
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:
        base,
        bark,
        bark:bark-internal,
        test-framework,
        test-framework-hunit,
        HUnit,
        containers,
        mustache,
        text
