cabal-version:      3.6
name:               bark
version:            0.0.2.0

-- A short (one-line) description of the package.
synopsis: A minimal static site generator.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: MIT

author: Srijan Paul

maintainer: srijannr1@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: app
    build-depends:
        base,
        commonmark,
        commonmark-extensions,
        text,
        directory,
        filepath,
        containers,
        mustache,
        unordered-containers,
        vector,
        fsnotify,
        dir-traverse,
        skylighting,
        tagsoup,
        blaze-html,
        either,
        mtl,
        frontmatter,
        bytestring,
        yaml,
        aeson,
        safe-coloured-text
    
    other-modules:
        Bark.Internal.IOUtil,
    exposed-modules:
        Bark.Types,
        Bark.Core,
        Bark.FrontMatter,
        Bark.CLI,
        Bark.Processors.SyntaxHighlight

executable bark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Bark.Processors.SyntaxHighlight,
        Bark.Internal.IOUtil,
        Bark.FrontMatter,
        Bark.Types,
        Bark.Core,
        Bark.CLI
    -- LANGUAGE extensions used by modules in this package.
    build-depends:
        base,
        text,
        commonmark,
        commonmark-extensions,
        directory,
        filepath,
        containers,
        mustache,
        unordered-containers,
        vector,
        fsnotify,
        dir-traverse,
        skylighting,
        tagsoup,
        blaze-html,
        mtl,
        frontmatter,
        bytestring,
        yaml,
        pretty-simple,
        bark:bark,
        aeson,
        safe-coloured-text

    ghc-options:
        -Wall
        -O2
        -static
        -threaded
        -fwarn-name-shadowing
        -fwarn-unused-imports
        -fwarn-tabs
    cc-options: -static

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-bark
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:
        base,
        bark,
        test-framework,
        test-framework-hunit,
        HUnit,
        containers,
        unordered-containers,
        mustache,
        aeson,
        yaml,
        text
